--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         1. Declare and Use Variables <br>
         2. Demonstrate Data Type <br>  
         3. Use Basic Operator <br>
+        ***Please log the script in the Console using F12 to execute. 
     </p>
     <h3>View my <a href="script.js"> script.js</a> for more detail.</h3>
     
