--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </p>
     <h3>View my <a href="script.js"> script.js</a> for more detail.</h3>
     
-    
+    <script src="script.js"></script>
 </body>
 </html>
