--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         1. Declare and Use Variables <br>
         2. Demonstrate Data Type <br>  
         3. Use Basic Operator <br>
-        ***Please log the script in the Console using F12 to execute. 
+        ***script.js is already linked with HTML in the body, please open Console(F12) to see the results. 
     </p>
-    <h3>View my <a href="script.js"> script.js</a> for more detail.</h3>
+    <h4>View my <a href="script.js"> script.js</a> for more detail.</h4>
     
     <script src="script.js"></script>
 </body>
