--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basics of JavaScipt</title>
     <h1>Lab 1: Basics of Javascript - Khoa Le </h1>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <p>This lab including: <br>
         1. Declare and Use Variables <br>
         2. Demonstrate Data Type <br>  
         3. Use Basic Operator <br>
-        ***script.js is already linked with HTML in the body, please open Console(F12) to see the results. 
+        ***script.js is already linked with index.html, please open Console(F12) to see the results. 
     </p>
-    <h4>View my <a href="script.js"> script.js</a> for more detail.</h4>
-    
-    <script src="script.js"></script>
+
 </body>
 </html>
