--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         1. Declare and Use Variables <br>
         2. Demonstrate Data Type <br>  
         3. Use Basic Operator <br>
-        ***script.js is already linked with index.html, please open Console(F12) to see the results. 
+        <br>
+        <br>
+        <b>*** script.js is already linked with index.html, please open the Console(F12) to see the results. </b>
     </p>
 
 </body>
